--- a/build.xml
+++ b/build.xml
@@ -6,7 +6,12 @@
 <target name="package">
 <echo message="packaging source code"/>
 </target>
-<target name="war">
-<echo message="archieving source code"/>
-</target>
+<target name="war" depends="compile">
+		<war destfile="${build}/${ant.project.name}-${version}.war"
+			webxml="${webxml}">
+			<fileset dir="${web}" />
+			<lib dir="${libruntime}" />
+			<classes dir="${classes}" />
+		</war>
+	</target>
 </project>
