--- a/build.xml
+++ b/build.xml
@@ -6,12 +6,13 @@
 <target name="package">
 <echo message="packaging source code"/>
 </target>
-<target name="war" depends="compile">
+<target name="war">
 		<war destfile="${build}/${ant.project.name}-${version}.war"
 			webxml="${webxml}">
 			<fileset dir="${web}" />
 			<lib dir="${libruntime}" />
 			<classes dir="${classes}" />
 		</war>
+	<echo message="building war file">
 	</target>
 </project>
