--- a/build.xml
+++ b/build.xml
@@ -6,6 +6,7 @@
 <target name="package">
 <echo message="packaging source code"/>
 </target>
+<target name="build" />
 <target name="war">
 		<war destfile="${build}/${ant.project.name}-${version}.war"
 			webxml="${webxml}">
