--- a/build.xml
+++ b/build.xml
@@ -8,7 +8,7 @@
 </target>
 <target name="build" />
 <target name="war">
-		<war destfile="**/*.war"
+		<war destfile="/var/lib/jenkins/workspace/pipeline-ant/*.war"
 			webxml="${webxml}">
 			<fileset dir="${web}" />
 			<lib dir="${libruntime}" />
