--- a/build.xml
+++ b/build.xml
@@ -8,9 +8,10 @@
 </target>
 <target name="build" />
 <target name="war">
-		<war destfile="/var/lib/jenkins/workspace/pipeline-ant/*.war"
+		<war 
+		        needxmlfile="false" 
+		        destfile="/var/lib/jenkins/workspace/pipeline-ant/*.war"
 			webxml="${webxml}">
-			needxmlfile="false" 
 			<fileset dir="${web}" />
 			<lib dir="${libruntime}" />
 			<classes dir="${classes}" />
